# chefer

./: .gitignore  Cargo.toml  README.md  structure.md
.github/workflows/: main.yml
crates/appcipe-normalize/: Cargo.toml
crates/appcipe-spec/: Cargo.toml
crates/appcipe-spec/src/: lib.rs  parse.rs  types.rs  validate.rs
crates/chefer-assembler/: Cargo.toml
crates/chefer-cli/: Cargo.toml  build.rs
crates/chefer-cli/src/: main.rs
crates/chefer-launch/: Cargo.toml
crates/chefer-pack/: Cargo.toml
crates/chefer-pack/src/: api.rs  bundle.md  bundle.rs  image.rs  lib.rs
crates/chefer-runtime/: Cargo.toml
crates/chefer-runtime/src/: extract.rs  footer.rs  main.rs  run.rs
crates/guest-agent/: Cargo.toml
crates/vmm-backend/: Cargo.toml
example/: appcipe.yml
examples/: appcipe.yml  appcipe_simple.yml
