[package]
name = "chefer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
appcipe-spec = { path = "../appcipe-spec" }
chefer-pack = { path = "../chefer-pack" }
clap = { version = "4.5.43", features = ["derive"] }
comfy-table = "7.1.4"
crossterm = "0.29.0"
owo-colors = "4.2.2"
self_update = "0.42.0"
serde_json = "1.0.142"
serde_yaml = "0.9.34"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
