[package]
name = "chefer-pack"
version = "0.1.0"
edition = "2024"

[dependencies]
appcipe-spec = { path = "../appcipe-spec" }
anyhow = "1.0.98"
fs-err = "3.1.1"
tar = "0.4.44"
flate2 = "1.1.2"
serde = "1.0.219"
time ={version = "0.3.41",features = ["formatting"]}
serde_json = "1.0.142"
serde_yaml = "0.9.34"
