[package]
name = "chefer-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
camino = "1.1"                                               # 更好用的 Utf8Path
fs-err = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
zstd = "0.13"
tar = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0", features = ["derive"] }
